Fixed alignment for individual account tables

--- a/public/css/homepage-table.css
+++ b/public/css/homepage-table.css
@@ -195,6 +195,11 @@ tr:last-child td{
     font-size: 14px;
 }
 
+.indiv-acct-table td:first-of-type {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
 .role-cell {
     background-color: #004112;
     width: fit-content;
@@ -222,7 +227,6 @@ tr:last-child td{
     justify-content: center;
     align-items: center;
     padding: 10px;
-    margin-top: -50px;
 }
 
 .role-icon-main {
